# IUST-Cheetah-Software-RL

./: .gitignore  CMakeLists.txt  TODO.txt
RL/: dofstate_publisher_leggedgym.py  dofstate_subscriber_leggedgym.py  dofstate_t.lcm  policy_leggedgym.py  publisher_leggedgym.py  runpolicy_leggedgym.py  subscriber_leggedgym.py
common/test/: test_ControlParameters.cpp
config/: default-terrain.yaml  default-user-parameters-file.yaml  initial_jpos_ctrl.yaml  iust-defaults.yaml  iust-robot-parameters.yaml  iust-user-parameters.yaml  jpos-user-parameters.yaml  jpos_user_parameters.yaml  new-user-parameters.yaml  rasp-user-parameters.yaml
debug_data/: leg_controller_plot.py  positive_matrix_check.py
robot/include/: HardwareBridge.h  RobotRunner.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  main_helper.cpp
scripts/: run_iust.sh  send_to_iust_robot.sh
sim/: CMakeLists.txt
sim/include/: Colors.h  DrawList.h  Graphics3D.h  Simulation.h
sim/src/: DrawList.cpp  Graphics3D.cpp  MiniCheetahDebug.cpp  MiniCheetahDebug.ui  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp
user/: CMakeLists.txt
user/RL_Controller/: CMakeLists.txt  RaspberryPiParameters.h  action_t.hpp  main.cpp  observ_t.hpp  policy_ctrl.cpp  policy_ctrl.hpp  simulation.cpp
user/RL_Controller/cfg/: config.yaml
user/RL_Controller/cfg/task/: Aliengo.yaml
user/RL_Controller/cfg/train/: AliengoPPO.yaml
user/RL_Controller/lcm/: observ_t.lcm  obslcm_observ_t.h  policy_loader.py  publisher.py  subscriber.py
user/RL_Controller/lcm/obslcm/: observ_t.hpp  obslcm_observ_t.c
(+66 files in other folders)
